# FinOpt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MIGRATION_NEON.md  MOBILE_ARCHITECTURE_SOLID_TDD.md  MOBILE_IMPLEMENTATION_PLAN.md  MOBILE_QUICK_GUIDE.md  MOBILE_STRATEGY.md  MOBILE_TDD_WORKFLOW.md  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  README_MOBILE.md  SESSION_SUMMARY.md  START.md  docker-compose.local-db.yml  docker-compose.yml  package-lock.json  package.json  render.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605040001_create_auth_tables.py  202605040002_create_accounts_table.py  202605050003_create_income_sources_and_categories.py  202605050004_create_transactions_table.py  202605070005_create_budgets.py  202605070006_create_bank_imports.py  202605070007_create_receipts.py  202605070008_create_savings_goals.py  202605070009_add_user_name.py  202605070010_add_receipt_item_category_id.py  202605080011_add_is_subscription_to_transactions.py  202605130012_add_usage_to_categories.py
backend/src/domain/: exceptions.py  value_objects.py
backend/src/infrastructure/: database.py  logging_config.py  models.py  repositories.py  security.py  settings.py
backend/src/presentation/: dependencies.py  main.py  middleware.py  routes.py  schemas.py
backend/tests/integration/: test_accounts_api.py  test_auth_api.py  test_budgets_api.py  test_categories_api.py  test_income_sources_api.py  test_savings_goals_api.py  test_transactions_api.py
(+259 files in other folders)
