[project]
name = "finopt-backend"
version = "0.1.0"
description = "Finopt backend API"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.100.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.9.0",
  "pwdlib[argon2]>=0.2.1",
  "python-json-logger>=2.0.7",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "coverage>=7.6.1",
  "factory-boy>=3.3.1",
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.pytest_cache
  | \.ruff_cache
  | pytest-cache-files-.*
)/
'''

[tool.mypy]
python_version = "3.12"
strict = true
